# arm-vector-bench

./: .gitignore  CMakeLists.txt  README.md  setup_check.py
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: micro_bench_dot.cpp  micro_bench_scalar.cpp
docs/: Handoff.md  ROADMAP.md
results/: dot_results.csv  scalar_results.csv
scripts/: bench.py
src/common/: data_generator.hpp  timer.hpp
src/scalar/: axpy_scalar.cpp  axpy_scalar.hpp  dot_scalar.cpp  dot_scalar.hpp
tests/: test_dot.cpp  test_scalar.cpp
